k8s_yaml/core/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernets.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ing-default
                port:
                  number: 80
          - path: /ip
            pathType: Prefix
            backend:
              service:
                name: ing-ip
                port:
                  number: 80
